--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
         <members>*</members>
@@ -31,6 +31,11 @@
     <types>
         <members>*</members>
         <name>StaticResource</name>
+    </types>
+    <types>
+        <members>illuminatedCloud</members>
+        <members>Project_Default</members>
+        <name>EmailServicesFunction</name>
     </types>
     <version>51.0</version>
 </Package>
